--- a/Homework/Html/homework-2/main.css
+++ b/Homework/Html/homework-2/main.css
@@ -3,16 +3,14 @@
     height: 500px;
     background: black;
     float: left;
-    position: absolute;
-    /*z-index: -1;*/
-}
+    position: absolute;}
+
 .red, .green, .blue, .black2
 {width: 200px;
     height: 400px;}
 
 .orange, .orange2{width: 800px;
-height: 45px;
-}
+height: 45px;}
 
 .orange {background: orange;
 margin-left: 5px;
@@ -20,8 +18,7 @@ margin-top: 5px;}
 
 .red{background: red;
 margin-left: 5px;
-float: left;
-    }
+float: left;}
 
 .green{background: green;
 float: left;}
